moving the git graph over to the main index.html

--- a/test/client/index.html
+++ b/test/client/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title></title>
+
+        <!-- stylesheet for the repository graph -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/graphviz.svg.css">
+
 <link rel="stylesheet" href="cm/codemirror.css">
 <script src="cm/codemirror.js"></script>
 <script src="cm/modes/javascript.js"></script>
