--- a/test/client/index.html
+++ b/test/client/index.html
@@ -170,5 +170,60 @@
 		
 		openSocket();
     </script>
+
+<!-- code for the repository graph -->
+        <div id="graph" style="width: 100%; height: 100pt; overflow: scroll; position: fixed; bottom: 0;"></div>
+
+        <script type="text/javascript" src="js/jquery.2.1.3.min.js"></script>
+        <script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
+        <script type="text/javascript" src="js/jquery.color.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/jquery.graphviz.svg.js"></script>
+        <script type="text/javascript">
+
+            $(document).ready(function(){
+                $("#graph").graphviz({
+                    url: "http://127.0.0.1:8081/repo_graph.svg",
+                    shrink: "0.5", 
+                  // tooltips: "init, update, show",
+                  // highlight: "selected",
+                    ready: function() {
+                        var gv = this
+                        console.log(gv.nodesByName());
+
+                        gv.tooltip($elements, show);
+                        gv.highlight($nodesEdges, tooltips);
+
+                        gv.nodes().click(function () {
+                            var $set = $()
+                            $set.push(this)
+                            $set = $set.add(gv.linkedFrom(this, true))
+                            $set = $set.add(gv.linkedTo(this, true))
+                         //   gv.highlight($set, true)
+                       //     gv.bringToFront($set)
+                         //   console.log(gv);
+                        })
+
+                   //     $("#graph").mouseenter(function(){
+                     //           alert("you entered yeah");
+                       //         })
+
+                        $(document).on("click",".appDetails", function () {
+                        var clickedBtnID = $(this).attr(gv); // or var clickedBtnID = this.id
+                        alert('you clicked on button #' + clickedBtnID);
+                        });
+
+                        $(document).keydown(function (evt) {
+                            if (evt.keyCode == 27) {
+                                gv.highlight()
+                            }
+                        })
+                    }
+                });
+            });
+        </script>
+
+
+
 </body>
 </html>
