updated the repo_graph.js to watch for changes made to the history i.e. whenever a commit is made, then to redraw the repo_graph.svg

--- a/repo_graph/repo_graph.html
+++ b/repo_graph/repo_graph.html
@@ -72,13 +72,20 @@
                      //           alert("you entered yeah");
                        //         })
 
-                        $(document).on("click",".appDetails", function () {
-                        var clickedBtnID = $(this).attr(gv); // or var clickedBtnID = this.id
-                        alert('you clicked on button #' + clickedBtnID);
-                        });
+                       // $(document).on("click",".appDetails", function () {
+                       // var clickedBtnID = $(this).id; // or var clickedBtnID = this.id
+                       // alert('you clicked on button #' + clickedBtnID);
+                       // });
+
+                       $('svg').click(function(){
+                            alert('element id is: '+this.title);
+
+                               });
 
                         $(document).keydown(function (evt) {
                             if (evt.keyCode == 27) {
+                                                            alert('element id is: '+this.title);
+
                                 gv.highlight()
                             }
                         })
