updated the html to display the commit hash on hover. times.txt is the start of experimenting with retrieving the utc timestamp for each commit. ideally this is what we want to display instead of the commit hash on mouseover

--- a/test/client/index.html
+++ b/test/client/index.html
@@ -237,7 +237,7 @@
                         gv.nodes().mouseenter(function(){
                                console.log($(this).attr("data-name"));
                                commit_detail.innerText = $(this).attr("data-name");
-
+                               console.log(this)
                                 })
 
                         $(document).on("click",".appDetails", function () {
