--- a/client/index.html
+++ b/client/index.html
@@ -256,7 +256,7 @@ function loadSVG(){
     </script>
 
 <!-- code for the repository graph -->
-<div id="graph" style="width: 100%; height: 20%; overflow: visible; position: fixed; bottom: 0;"></div>
+<div id="graph" style="width: 100%; height: 20%; overflow: scroll; position: fixed; bottom: 0;"></div>
 
 
 
