--- a/client/index.html
+++ b/client/index.html
@@ -255,7 +255,7 @@ function loadSVG(){
 
     </script>
 <!-- Access the code-forensics charts -->
-<iframe src="http://localhost:3000/index.html" width=50% height=30% align="right"></iframe>
+<iframe src="http://localhost:3000/index.html" width=50% height=50% align="right" overflow="scroll"></iframe>
 
 <!-- code for the repository graph -->
 <div id="graph" style="width: 100%; height: 20%; overflow: scroll; position: fixed; bottom: 0;"></div>
