--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 <script src="cm/modes/javascript.js"></script>
 <script src="cm/modes/clike.js"></script>
 <script src="cm/modes/glsl.js"></script>
+<script src="cm/merge.js"></script>
 
 <!--script sources for the repo_graph & jquery -->
 <script type="text/javascript" src="js/jquery.2.1.3.min.js"></script>
