added a new goal for the dev.txt

--- a/client/merge.html
+++ b/client/merge.html
@@ -160,7 +160,7 @@ stretches of text.</p>
                               orig1 = arg;
 
                               initUI();
-                            console.log(arg)
+                           // console.log(arg)
                             break;    
                 		case "state":
                 			//document.getElementById('state').innerHTML = arg;
