--- a/client/merge.html
+++ b/client/merge.html
@@ -57,11 +57,11 @@
     Editor Settings
 <br>
 <button id="live_diffing" onclick="toggleDifferences()">Toggle: Live Diffing</button> 
-<button id="collapse" onclick="collapse">Toggle: Collapse Changes</button> 
+<button id="toggleCollapse" onclick="collapse">Toggle: Collapse Changes</button> 
 <button id="align" onclick="connect = connect ? null : 'align'; initUI()">Toggle: Align Changes</button> 
 </p>
-<button onclick="showValue()">Show Value</button>
-<button onclick="sendCode()">Send Original</button>
+<button onclick="sendLeftCode()">Send Left Code</button>
+<button onclick="sendRightCode()">Send Right Code (not yet working)</button>
 
 
 
@@ -191,10 +191,10 @@
 			 if (!ws || ws.readyState === WebSocket.CLOSED) openSocket();
 		}, 2000);
 		
-		function sendCode() {
+		function sendLeftCode() {
          //   var message = "edit?" + editorCM.getValue();   
-         var message = "edit?" + orig1; //HOW DO WE GET THE CURRENT STATE OF THE CODEMIRROR IN MERGEVIEW??
-            console.log("SENDING TO SERVER: \n\n" + message);
+         var message = "edit?" + dv.editor().getValue()
+            console.log("SENDING TO SERVER: \n" + message);
             //log('sending: ' + message);
             ws.send(message);
         }
@@ -321,17 +321,32 @@ function loadSVG(){
 
   }      
 
+/////////////////////////////////////
+                                    //MERGEVIEW
+
+var value;
+var orig1;
+var dv;
+panes = 2;
+highlight = true;
+connect = "align";
+var target;
+var collapse;
+var requested;
+var current;
 
 
-
-function collapse(){
+function toggleCollapse(){
     collapse = !collapse
     initUI()
 }
 
+function toggleDifferences() {
+  dv.setShowDifferences(highlight = !highlight);
+}
 
+//get and set MergeView content
 
-var value, orig1, dv, panes = 2, highlight = true, connect = "align", target, collapse//, collapse = true; target
 function initUI() {
  
   if (value == null) return;
@@ -355,60 +370,17 @@ function initUI() {
     //collapseIdentical: collapse
     collapse: collapse
   });
- // console.log(origRight)
 
 }
 
- function showValue(){
-console.log("not ready yet. \n\ncheck here: https://discuss.codemirror.net/t/retrieve-the-content-of-a-mergeview-pane/1687 ")
- 
-
-
- }
-
-// var result = document.getElementById("view").innerHTML
-
-
-//    var doc = new DOMParser().parseFromString(result, 'text/html');
-//     var noHTML = (doc.body.textContent || "\n\n")
- 
-//     var editorMain = noHTML.match(/.*?(?=;1|$)/i)[0]
-//  //  console.log( test.body.textContent || "\n")
-
-// /// var editorMain = editorContent.match(/.*?(?=\n4|$)/i)[0]
-//  console.log(editorMain)
-// //console.log(test)
-//  
-    // console.log(dv.edit.options.origRight)
-    // console.log(dv.edit.options.value)
-    //console.log(document.getElementById("view").innerHTML)
-   // console.log(dv.wrap.textContent)
-
-   //var steve = JSON.parse(dv.right.edit.state.diffViews.DiffView)
-   // console.log("origRight" + dv.options.right.mv.options.origRight)
-  //  console.log("value" + dv.options.right.mv.options.origRight)
- // console.log(dv.wrap.innerText)
-
-// console.log(dv.wrap.innerText)
-// var editorContent = dv.wrap.innerText
-
-// var editorMain = editorContent.match(/.*?(?=\n4|$)/i)[0]
-// console.log(editorMain)
-
-
-// }
 
 
 
-function toggleDifferences() {
-  dv.setShowDifferences(highlight = !highlight);
-}
 
 
 //window.onload = function() {
 
-var requested;
-var current;
+
 window.onload = function() {
 
   let d = document.createElement("div"); d.style.cssText = "width: 50px; margin: 7px; height: 14px"; dv.editor().addLineWidget(57, d)
