--- a/client/merge.html
+++ b/client/merge.html
@@ -25,6 +25,9 @@
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/jquery.graphviz.svg.js"></script>
 
+<!-- temp fix for the 'cannot find 'favicon.ico' error -->
+<link rel="shortcut icon" href="">
+
 
 
 
@@ -73,7 +76,7 @@ Editor Settings
 
 <!--the repository graph -->
 
-<div id="graph" style="width: 100%; height: 10%; overflow: scroll; position: fixed;"></div>
+<div id="graph" style="width: 100%; height: 20%; overflow: scroll; position: fixed; zoom: 50%"></div>
 
 <br><br><br>
 <!-- mouseover stuff -->
@@ -297,7 +300,7 @@ openSocket();
 
 //populate the userWorkTree drop-down menu
 var select = document.getElementById('selectElementId')
-// select.options[select.options.length] = new Option('Please Select...', 'Please Select...');
+// select.options[select.options.length] = new  Option('Please Select...', 'Please Select...');
 $.get('worktreeList.txt', function(data) {
     worktreeList = data
     var lines = data.split('\n');
@@ -359,7 +362,7 @@ function worktreeSelect()  {
     selection = document.aform.userWorktree.value;
 
         //switch to an existing worktree
-        log("On Worktree " + selection)
+        log("Right editor working within " + selection + "'s worktree")
         ws.send("switchWorktree " + selection)
     }
 
